# GR00T-WholeBodyControl

./: README.md  check_environment.py  pyproject.toml
docs/: files.md  gear_sonic_mjlab_migration_update.md  rwm_sonic_integration.md  rwmu_local_validation.md  rwmu_training.md
docs/source/: index.rst
docs/source/getting_started/: installation_mjlab_npu.md
docs/source/tutorials/: isaac_teleop_publisher_setup.md
gear_sonic/: pyproject.toml  train_agent_trl.py
gear_sonic/config/aux_losses/universal_token/: g1_recon_only.yaml
gear_sonic/config/exp/manager/: sonic_isaac_minimal.yaml
gear_sonic/config/exp/mjlab/: sonic_mjlab_minimal.yaml  sonic_mjlab_universal_smoke.yaml
gear_sonic/config/exp/rwm/: sonic_release.yaml  sonic_rwm_smoke.yaml
gear_sonic/config/rwm/: sonic_schema.yaml
gear_sonic/data_process/: convert_bones_csv_to_mjlab_npz.py  pack_reference_motion_to_mjlab_npz.py
gear_sonic/envs/: mjlab_env.py  mjlab_multi_motion.py  rwm_env.py
gear_sonic/envs/wrapper/: __init__.py  manager_env_wrapper.py  mjlab_sonic_env_wrapper.py
gear_sonic/scripts/: check_isaac_mjlab_fk_alignment.py  check_isaac_mjlab_fk_batch.py  check_mjlab_alignment.py  check_mjlab_rollout_sanity.py  collect_sonic_rwmu_dataset.py  eval_mjlab_plumbing.py  evaluate_rwmu_nstep.py  export_rwmu_transitions.py  prepare_sonic_rwmu_sampling_manifest.py  run_rwmu_offline_smoke.py  run_sonic_rwmu_sampling_plan.py  summarize_training_compare.py  train_sonic_rwmu_dynamics.py  validate_rwm_config_parity.py  validate_sonic_rwmu_dataset.py  validate_sonic_rwmu_fields.py
gear_sonic/tests/: test_mjlab_sonic_env_wrapper.py
gear_sonic/trl/callbacks/: model_save_callback.py
gear_sonic/trl/trainer/: ppo_trainer.py
gear_sonic/utils/motion_lib/: torch_humanoid_batch.py
install_scripts/: install_mjlab_training.sh  install_ros.sh
