[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gear_sonic"
dynamic = ["version"]
readme = {text = "NVIDIA Gear Sonic - Whole Body Control", content-type = "text/plain"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "NVIDIA Gear Lab"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.15.3",
    "torch>=2.4.0",
    "joblib",
    "tqdm",
    "easydict",
    "loguru",
]
license = {text = "Apache-2.0"}

[project.optional-dependencies]
# Teleop: minimal deps for running ZMQ-based teleop
# pico_manager_thread_server.py + visualization (pyzmq, pyvista, pinocchio FK)
# Usage: pip install -e "gear_sonic[teleop]"
teleop = [
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
    "pin",
    "pyvista; platform_machine != 'aarch64'",
]
# MuJoCo simulation (run_sim_loop.py and related scripts)
# Usage: pip install -e "gear_sonic[sim]"
sim = [
    "mujoco",
    "tyro",
    "pin",
    "pyyaml",
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
    "opencv-python",
]
# Data collection: Sonic VLA data exporter with LeRobot dataset output
# Usage: pip install -e "gear_sonic[data_collection]"
data_collection = [
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
    "pin",
    "tyro",
    "pyttsx3==2.90",
    "av>=14.2",
    "opencv-python",
    "lerobot @ git+https://github.com/huggingface/lerobot.git@a445d9c9da6bea99a8972daa4fe1fdd053d711d2",
    "datasets==3.6.0",
]
# Camera server: runs on the robot to publish camera frames over ZMQ
# Includes depthai (OAK cameras) by default. For other SDKs (pyrealsense2),
# install them separately into the .venv_camera venv.
# Usage: pip install -e "gear_sonic[camera]"
camera = [
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
    "opencv-python",
    "tyro",
    "depthai",
    "requests",
]
# Inference: VLA inference client for running Isaac-GR00T policies
# Usage: pip install -e "gear_sonic[inference]"
inference = [
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
    "pin",
    "tyro",
    "opencv-python",
    "scipy",
    "Isaac-GR00T @ git+https://github.com/NVIDIA/Isaac-GR00T.git",
]
# Training: full RL training stack (Isaac Lab must be installed separately)
# Usage: pip install -e "gear_sonic[training]"
training = [
    "hydra-core==1.3.2",
    "wandb",
    "trl==0.28.0",
    "transformers>=4.56.2",
    "accelerate>=1.3.0",
    "tensorboard",
    "vector-quantize-pytorch",
    "smpl_sim @ git+https://github.com/ZhengyiLuo/SMPLSim.git",
]
# RWM-U adapter/exporter path.  The upstream RWM code is kept in
# external_dependencies/robotic_world_model for reference; this extra only adds
# lightweight Python dependencies needed by SONIC-side adapter/exporter scripts.
# Usage: pip install -e "gear_sonic[training,rwm]"
rwm = [
    "pandas",
    "tensordict",
]
# MuJoCo/mjlab training path.  This is intentionally separate from the Isaac
# training extra so users can install a lightweight CPU-rollout environment on
# machines where Isaac Sim cannot run, including Ascend NPU hosts.
# Usage: pip install -e "gear_sonic[training,mjlab]"
mjlab = [
    "mjlab>=1.5.0,<1.6.0",
]
# Ascend NPU runtime hook.  The exact torch-npu/CANN/PyTorch matrix is platform
# specific; install_scripts/install_mjlab_training.sh lets users override the
# torch-npu wheel or package spec with TORCH_NPU_PACKAGE.
# Usage: pip install -e "gear_sonic[training,mjlab,npu]"
npu = [
    "torch-npu",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["gear_sonic*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gear_sonic = ["py.typed", "**/*.json", "**/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "gear_sonic.version.VERSION"}
